--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "astro-compress": "^2.3.5",
     "astro-icon": "^1.1.5",
     "astro-purgecss": "^5.1.0",
+    "linkedom": "^0.18.6",
     "react": "18",
     "react-dom": "18",
     "sharp": "^0.33.5",
