--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "astro-icon": "^1.1.5",
     "astro-purgecss": "^5.1.0",
     "linkedom": "^0.18.6",
+    "maath": "^0.10.8",
     "react": "18",
     "react-dom": "18",
     "sharp": "^0.33.5",
